# smtu_uauv

./: CMakeLists.txt  package.xml
config/: teleop.yaml  uauv.yaml
include/: freefloating_gazebo_control.h  freefloating_gazebo_fluid.h  freefloating_pids_body.h  freefloating_pids_joint.h
launch/: uauv.launch  uwsim.launch  uwsim_spawner.launch
objects/: pool.dae  pool.sdf  pool.stl  uauv.dae
scenes/: uauv_uwsim.xml
src/: freefloating_gazebo_control.cpp  freefloating_gazebo_fluid.cpp  freefloating_pids.cpp  freefloating_pids_body.cpp  freefloating_pids_joint.cpp  freefloating_pids_main.cpp  teleop.cpp
urdf/: pool.sdf  uauv.xacro  uauv_buoyancy_dummy.urdf  uauv_thrusters_dummy.urdf  uauv_uwsim.urdf
world/: underwater.world
